# grepzilla

./: .gitignore  Cargo.toml  README.md  checks.md  close_epics.md  ingest.json  manifest.json  req.json  resp.json
.github/workflows/: ci.yml
crates/broker/: Cargo.toml
crates/broker/benches/: search_bench.rs  v2_getdoc_bench.rs  v2_prefilter_bench.rs
crates/broker/config/: broker.toml
crates/broker/segments/001756757493430/: grams.json
crates/broker/segments/001756757493685/: field_masks.json  grams.json  meta.json
crates/broker/segments/001756757587550/: field_masks.json  grams.json
crates/broker/segments/001756757763734/: grams.json  meta.json
crates/broker/segments/001756757835532/: field_masks.json  grams.json
crates/broker/segments/001756757836390/: field_masks.json  grams.json  meta.json
crates/broker/segments/X1EmqW7M0dBhaXeAl1YCR/: data.jsonl
crates/broker/src/: config.rs  http.rs  http_api.rs  lib.rs  main.rs  storage_adapter.rs
crates/broker/src/ingest/: compactor.rs  flusher.rs  hot.rs  memtable.rs  mod.rs  wal.rs
crates/broker/src/manifest/: fs.rs  mod.rs
crates/broker/src/search/: executor.rs  manifest.rs  mod.rs  paginator.rs  selector.rs  snippet.rs  types.rs
crates/broker/tests/: config_tests.rs  cursor_extract.rs  deadline.rs  dedup.rs  e2e_healthz.rs  e2e_ingest.rs  e2e_ingest_backpressure.rs  e2e_ingest_cap.rs  e2e_ingest_idempotent.rs  e2e_ingest_manifest.rs  e2e_manifest.rs  e2e_manifest_not_found.rs  e2e_wal_corruption.rs  e2e_wal_windows_rename.rs  helpers.rs  ingest_wal_roundtrip.rs  metrics_dedup.rs  metrics_null.rs  metrics_positive.rs  pagination_two_pages.rs  run_all.rs  schema_manifest_out.rs  schema_search_response.rs  search_http.rs  search_http_shards.rs  search_parallel.rs  search_shards_v2.rs  wal_checksum.rs
crates/broker/wal/: 0001756757493676-DpVGg_dAqoncLbx-a8N_x.jsonl  0001756757493676-DpVGg_dAqoncLbx-a8N_x.xxh3  0001756757836380-4cq_3eN87yDn9b7uYUWDL.jsonl  0001756757836380-4cq_3eN87yDn9b7uYUWDL.xxh3
crates/grepzilla_segment/: Cargo.toml
crates/grepzilla_segment/benches/: preview_bench.rs  v2_getdoc_bench.rs
crates/grepzilla_segment/src/: cursor.rs  gram.rs  lib.rs  manifest.rs  manifest_store.rs  normalizer.rs  search.rs  segjson.rs
crates/grepzilla_segment/src/common/: mod.rs  preview.rs  strings.rs
crates/grepzilla_segment/src/v2/: codec.rs  crc.rs  docs_reader.rs  docs_writer.rs  mod.rs  reader.rs  types.rs  varint.rs  writer.rs
crates/grepzilla_segment/src/verify/: factory.rs  mod.rs  pcre2_impl.rs  regex_impl.rs
crates/grepzilla_segment/tests/: basic.rs  prefilter_field_mask.rs  preview_tests.rs  v2_docs_roundtrip.rs  v2_prefilter_and_get_doc.rs  v2_prefilter_fields.rs
crates/gzctl/: Cargo.toml
crates/gzctl/src/: main.rs
crates/storage/src/segments/: reader.rs
crates/storage/tests/: mmap_stream.rs
docs/: Phase-2-final-full.md  Phase-2-final.md  epic_D.md  roadmap.md  runbook.md  testing.md
docs/history/: 1.md
docs/rfcs/: 0001-search-and-replication-flows.md  0002-segment-v2-format.md
examples/: data.jsonl
src/: lib.rs  main.rs  query.rs  util.rs
src/index/: gram.rs  inverted.rs  mod.rs  normalizer.rs
