[package]
name = "grepzilla"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "2.0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
croaring = "2.3.1"
rayon = "1"
unicode-normalization = "0.1"
memchr = "2"
clap = { version = "4", features = ["derive"] }
hdrhistogram = "7"