[package]
name = "broker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time", "sync", "fs", "io-util", "net"] }
tokio-util = { version = "0.7", features = ["rt"] }
nanoid = "0.4"
futures = "0.3"
regex = "1.10"
async-trait = "0.1"
tower="0.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
crc32fast = "1.4"

grepzilla_segment = { path = "../grepzilla_segment" }

[dev-dependencies]
criterion = "0.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time", "sync"] }
serde_json = "1.0"
tower = {version = "0.4", features = ["util"]}
tempfile = "3"
http-body-util = "0.1"

# todo rm that
parking_lot = "0.12.4"

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "v2_prefilter_bench"
harness = false

[[bench]]
name = "v2_getdoc_bench"
harness = false