[package]
name = "grepzilla_segment"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
croaring = "2.3.1"
unicode-normalization = "0.1"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
memmap2 = "0.9"
crc32fast = "1.4"
crc64fast = "1.1.0"   # ECMA-182

[dev-dependencies]
tempfile = "3"