[package]
name = "grepzilla_segment"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
croaring = "2.3.1"
unicode-normalization = "0.1"
regex = "1.10"
pcre2 = { version = "0.2", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
memmap2 = "0.9"
crc32fast = "1.4"
crc64fast = "1.1.0"   # ECMA-182
lru = "0.16.0"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "v2_getdoc_bench"
harness = false 

[[bench]]
name = "preview_bench"
harness = false

[features]
default = []
# Включает альтернативный движок верификации через PCRE2
engine-pcre2 = ["pcre2"]